--- a/index.html
+++ b/index.html
@@ -135,8 +135,7 @@
 <div class="col-mx-auto col-md-6 my-5">
 <h1 class="text-capitalize">about <strong class='banner-title-grey'>us</strong></h1>
 <p class="my-4 text-muted w-75">
- A2 crickets is a manufacture of Cricket accessories provide you best Cricket accessories
- in a market deliver across the country 
+ar crickets is a manufacture and corpoarate Crickets supplier. deals in season ball, bat, gloves, bat and etc.
 </p>
 <a href="#" class='btn btn-outline-secondary text-uppercase'>Explore</a>
 
