--- a/index.html
+++ b/index.html
@@ -333,8 +333,8 @@ ar crickets is a manufacture and corpoarate Crickets supplier. deals in season b
  <img src="img/ball.jpg" alt="breadicon"> -->
  <h6 class='text-uppercase my-3 service-title'>Balls</h6>
 
- <p class="w-75 mx-auto text-left service-text">The A2 cricket Ball is a good quality two-piece cricket ball made from good quality alum tanned leather. The Seamer is ideally
-suited for club and school matches.
+ <p class="w-75 mx-auto text-left service-text">The AR crickets Ball is a good quality two-piece cricket ball made from good quality leather. The Seamer is ideally
+suited for corporate, club and Acdamey's.
 </p>
 
 </div>
@@ -348,7 +348,7 @@ suited for club and school matches.
  <!-- <img src="img/bat.jpg" alt="breadicon"> -->
  <h6 class='text-uppercase my-3 service-title'>Repair Bats</h6>
 
- <p class="w-75 mx-auto text-left service-text">Repair Your Broken Bat and Make your old bat new with A2
+ <p class="w-75 mx-auto text-left service-text">Repair Your Broken Bat and Make your old bat new with Ar
    Crickets !</p>
 
 </div>
@@ -356,15 +356,15 @@ suited for club and school matches.
   <!--end of single services -->
 
   <!-- single services -->
-<div class="col-md-4 text-center my-3">
+<!-- <div class="col-md-4 text-center my-3"> -->
 
 
  <!-- <img src="img/kit.jpg" alt="candy"> -->
- <h6 class='text-uppercase my-3 service-title'>Kit</h6>
+<!--  <h6 class='text-uppercase my-3 service-title'>Kit</h6>
 
  <p class="w-75 mx-auto text-left service-text">Fit your all Cricket Acessories in 1 bag click to know more!</p>
 
-</div>
+</div> -->
 
   <!--end of single services --> 
 
